# GOTY

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: assets.cpp  assets.h  constants.h  main.cpp
src/comp/: acceleration.h  bullet.h  damage.h  enemy.h  entity.h  firerate.h  gore.h  hitbox.h  hp.h  label.h  life.h  player.h  position.h  shootpattern.h  shotinterval.h  spawner.h  sprite.h  spriteGroup.h  spritevector.h  timer.h  velocity.h  weapon.h
src/core/: factories.cpp  factories.h  game.cpp  game.h  main.cpp  resourcemanager.cpp  resourcemanager.h  vizualizer.cpp  vizualizer.h
src/helpers/core/: factories.cpp  factories.h  setupplayer.cpp  setupplayer.h
src/helpers/factories/: bulletFactory.cpp  bulletFactory.h  weaponFactory.cpp  weaponFactory.h
src/sys/: combat.cpp  combat.h  physics.cpp  physics.h
